--- a/style.css
+++ b/style.css
@@ -133,7 +133,7 @@ header{
 }
 
 .header a:hover {
-  background-color: #ddd;
+  background-color: #dddddd;
   color: black;
 }
 
@@ -165,9 +165,12 @@ nav{
     /*display:flex;
     background-color: black;
     margin-top:-10%;
-    padding-left: 21%;*/
-	float: right;
-    display:flex;
+    padding-left: 21%;
+    float: right;
+    display:flex;*/
+	overflow: hidden;
+	padding: 20px 10px;
+	background-color: black;
     text-decoration: none;
     font-family: 'Oswald', sans-serif;
     text-transform: uppercase;
