--- a/style.css
+++ b/style.css
@@ -91,7 +91,10 @@ img.logo {
 }
 
 @media screen and (max-width: 500px) {
-  ul li {float: none;}
+  ul li {
+  float: none;
+   display: block;
+    text-align: left;}
 }
   nav a {
     float: none;
