--- a/style.css
+++ b/style.css
@@ -94,7 +94,7 @@ img.logo {
   ul li {
   float: none;
    display: block;
-    text-align: left;}
+    text-align: left;
 }
   nav a {
     float: none;
