--- a/style.css
+++ b/style.css
@@ -134,7 +134,7 @@ header{
 }
 
 @media screen and (max-width: 500px) {
-  .header a {
+header a {
     float: none;
     display: block;
     text-align: left;
