--- a/style.css
+++ b/style.css
@@ -162,7 +162,7 @@ ul li {float: right;}
 ul li a {
   display: block;
   color: white;
-  text-align: center;
+  text-align: left;
   padding: 14px 16px;
   text-decoration: none;
 }
