--- a/style.css
+++ b/style.css
@@ -228,13 +228,8 @@ nav a:hover{
     background-image: url('media/bg-gold.png');
 }
 
-@media screen and (max-width: 500px) {
-  ul li, nav {float: none;}
-  nav a {
-    float: none;
-    display: block;
-    text-align: left;
-  }
+@media screen and (max-width: 700px) {
+  ul li, nav, nav a {float: none;}
 }
 
 .fa{
