--- a/style.css
+++ b/style.css
@@ -151,9 +151,7 @@ ul li {
     font-family: 'Oswald', sans-serif;
     text-transform: uppercase;
     font-weight: 400;
-    font-size: 20px;/*1.5vw;*/
-    line-height: 150%;
-    padding:2%;
+    font-size: 1.5vw;
 }
 
 ul li a {
