--- a/style.css
+++ b/style.css
@@ -102,40 +102,6 @@ header{
 	*/
 }
 
-.header a {
-  float: left;
-  color: black;
-  text-align: center;
-  padding: 12px;
-  text-decoration: none;
-  font-size: 18px; 
-  line-height: 25px;
-  border-radius: 4px;
-}
-
-.header a.logo {
-  font-size: 25px;
-  font-weight: bold;
-}
-
-.header a:hover {
-  background-color: #dddddd;
-  color: black;
-}
-
-.header a.active {
-  background-color: dodgerblue;
-  color: white;
-}
-
-.header-right {
-  float: right;
-}
-
-.header-contact{
-	float: left;
-}
-
 ul {
   list-style-type: none;
   margin: 0;
@@ -190,7 +156,7 @@ nav{
     line-height: 20px;*/
 }
 
-nav a{
+/*nav a{
   float: left;
   color: white;
   text-align: center;
@@ -221,10 +187,10 @@ nav a:hover{
 	-webkit-background-clip: text;
     color: transparent;
     background-image: url('media/bg-gold.png');
-}
+}*/
 
 @media screen and (max-width: 1000px) {
-  ul li, nav, nav a {float: none;}
+  ul li, nav {float: none;}
 }
 
 .fa{
@@ -339,19 +305,6 @@ img.logo {
 	float:left;
 }
 
-@media screen and (max-width: 500px) {
-  nav a {
-    float: none;
-    display: block;
-    text-align: left;
-  }
-  
-  nav {
-    float: none;
-    flex-flow:column; /*IDE SZENDVICSMENÜ KELL*/
-  }
-}
-
 header{
 	overflow: hidden;
 	padding: 20px 10px;
@@ -369,7 +322,7 @@ header{
 	float: left;
 }
 
-nav a2{
+/*nav a2{
     text-decoration: none;
     padding: 2.6%;
     text-align: center;
@@ -388,7 +341,7 @@ nav a:hover{
 	-webkit-background-clip: text;
     color: transparent;
     background-image: url('media/bg-gold.png');
-}
+}*/
 
 .fa{
 	padding: 1vw;
