--- a/style.css
+++ b/style.css
@@ -190,7 +190,7 @@ nav a:hover{
 }*/
 
 @media screen and (max-width: 700px) {
-  ul li, nav {float: none;}
+  ul li, nav, nav img {float: none;}
 }
 
 .fa{
