--- a/style.css
+++ b/style.css
@@ -193,8 +193,7 @@ nav a:hover{
   ul li, nav, nav img {float: none;}
   nav img {
   display: block;
-  margin-left: auto;
-  margin-right: auto;
+  margin: 0 auto;
   width: 50%;}
 }
 
