--- a/style.css
+++ b/style.css
@@ -203,6 +203,7 @@ table {
   border-spacing: 0;
   width: 100%;
   border: 1px solid #ddd;
+  margin: 0 auto;
 }
 
 tr:nth-child(even){background-color: #f2f2f2}
