--- a/style.css
+++ b/style.css
@@ -202,11 +202,14 @@ table {
   border-collapse: collapse;
   border-spacing: 0;
   width: 100%;
-  border: 1px solid #ddd;
-  margin: 0 auto;
+  border: 0px solid #ddd;
 }
 
-tr:nth-child(even){background-color: #f2f2f2}
+table.center {
+   margin: 0 auto;
+}
+
+tr:nth-child(even){background-color: transparent}
 
 
 .fa{
