--- a/style.css
+++ b/style.css
@@ -215,6 +215,7 @@ td {
     font-weight: 500;
     font-size: 16px; /*1.8vw;*/
     line-height: 150%;
+    width: 50%;
 }
 
 tr:nth-child(even){background-color: transparent}
