--- a/style.css
+++ b/style.css
@@ -192,8 +192,7 @@ nav a:hover{
   ul li, nav, nav img {float: none;}
   nav img {
   display: block;
-  margin: 0 auto;
-  width: 50%;}
+  margin: 0 auto;}
 }
 
 
