--- a/style.css
+++ b/style.css
@@ -214,7 +214,8 @@ th {
     font-family: 'Nunito', serif;
     text-transform: uppercase;
     font-weight: 800;
-    font-size: 18px; /*2vw;*/
+    font-size: 18px; 
+    line-height: 200%;
 }
 
 td {
