--- a/style.css
+++ b/style.css
@@ -81,6 +81,7 @@ h5 a{
 body {
     background-color: rgb(231, 189, 98);
     margin:0;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 header{
