--- a/style.css
+++ b/style.css
@@ -244,6 +244,10 @@ td.right {
     text-align: right;
 }
 
+td.center {
+    text-align: center;
+}
+
 tr:nth-child(even){background-color: transparent}
 
 
