--- a/style.css
+++ b/style.css
@@ -251,6 +251,19 @@ td.center {
     text-align: center;
 }
 
+td.center a {
+    text-align: center;
+    text-decoration: none;
+    color: white;
+    font-style: italic;
+    font-family: 'Nunito', serif;
+    font-weight: 500;
+    font-size: 16px; /*1.8vw;*/
+    line-height: 150%;
+    width: 50%;
+    vertical-align: top;
+}
+
 tr:nth-child(even){background-color: transparent}
 
 
