--- a/style.css
+++ b/style.css
@@ -253,7 +253,7 @@ td.center {
     text-align: center;
 }
 
-td.center a {
+footer a {
     text-align: center;
     text-decoration: none;
     color: white;
