--- a/style.css
+++ b/style.css
@@ -91,13 +91,6 @@ header{
 	overflow: hidden;
 	padding: 20px 10px;
 	background-color: black;
-    /*position:relative;
-	width:100%;
-    display:flex;
-    flex-flow: row;
-    justify-content: center;
-    align-items: center;
-	*/
 }
 
 ul {
@@ -300,8 +293,8 @@ tr:nth-child(even){background-color: transparent}
 
 footer{
     width:100%;
-    display:flex;
-    flex-flow: row;
+    display:inline;/*flex*/
+    /*flex-flow: row;*/
     background-color: black;
     justify-content: center;
     align-items: center;
