--- a/style.css
+++ b/style.css
@@ -233,12 +233,12 @@ th {
 }
 
 footer th img {
-    width: 120;
+    width: 120px;
     text-align: center;
 }
 
 footer td img {
-    width: 30;
+    width: 30px;
     text-align: center;
 }
 
