--- a/style.css
+++ b/style.css
@@ -263,6 +263,21 @@ footer td {
     vertical-align: top;
 }
 
+footer td.center {
+    text-align: center;
+}
+
+footer td a {
+    text-decoration: none;
+    color: black;
+    font-style: italic;
+    font-family: 'Nunito', serif;
+    font-weight: 500;
+    font-size: 16px; /*1.8vw;*/
+    line-height: 150%;
+    vertical-align: top;
+}
+
 td a {
     text-decoration: none;
     color: black;
