--- a/style.css
+++ b/style.css
@@ -392,7 +392,7 @@ div.subtitle{
     width: 100%;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     justify-content: center;
-	background-color: 0f4b3b;/*#0f4b3b;*/
+    background-color: #0f4b3b;
 }
 
 div.left{
