--- a/style.css
+++ b/style.css
@@ -393,6 +393,7 @@ div.subtitle{
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     justify-content: center;
     background-color: #0f4b3b;
+    margin-bottom: 20px;
 }
 
 div.left{
