--- a/style.css
+++ b/style.css
@@ -136,6 +136,10 @@ footer ul li a {
   text-decoration: none;
   text-align: center;
   padding: 14px 16px;
+	font-family: 'Oswald', sans-serif;
+    text-transform: uppercase;
+    font-weight: 400;
+    font-size: 20px;
 }
 
 ul li a:hover {
