--- a/style.css
+++ b/style.css
@@ -311,7 +311,7 @@ td.center {
     text-align: center;
 }
 
-footer a {
+footer table a {
     text-align: center;
     text-decoration: none;
     color: white;
