--- a/style.css
+++ b/style.css
@@ -101,6 +101,16 @@ ul {
   background-color: black;
 }
 
+
+footer ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  background-color: black;
+	width: 50%;
+}
+
 header ul li, body ul li {
     float: right;
     text-decoration: none;
