--- a/style.css
+++ b/style.css
@@ -84,7 +84,7 @@ h5 a{
 body {
     background-color: rgb(231, 189, 98);
     margin:0;
-    font-family: Arial, Helvetica, sans-serif;
+    /*font-family: Arial, Helvetica, sans-serif;*/
 }
 
 header{
