--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ font-family: 'Croissant One', cursive;
 
 /** {box-sizing: border-box;}*/
 
-h1{
+/*h1{
     text-decoration: none;
     text-align: center;
     text-shadow: 3px 3px 3px #ababab;
@@ -57,7 +57,7 @@ h4{
     font-family: 'Nunito', serif;
     text-transform: uppercase;
     font-weight: 800;
-    font-size: 18px; /*2vw;*/
+    font-size: 18px;
 }
 
 h4 a{
@@ -71,14 +71,14 @@ h5{
     color: black;
     font-family: 'Nunito', serif;
     font-weight: 500;
-    font-size: 16px; /*1.8vw;*/
+    font-size: 16px;
     line-height: 150%;
 }
 
 h5 a{
     color: black;
     font-style: italic;
-}
+}*/
 
 
 body {
