--- a/style.css
+++ b/style.css
@@ -404,13 +404,7 @@ div.menu img{
     width:80%;
 }
 
-div.subtitle{
-    width: 100%;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-    justify-content: center;
-    background-color: #0f4b3b;
-    margin-bottom: 20px;
-}
+
 
 div.left{
     width:90%;
@@ -538,7 +532,16 @@ div.subtitle{
     width: 100%;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     justify-content: center;
-	background-color: 0f4b3b;/*#0f4b3b;*/
+    background-color: #0f4b3b;
+    margin-bottom: 0 0 20px 0;
+    text-decoration: none;
+    text-align: center;
+    color: #eddc98;
+    font-family: 'Oswald', sans-serif;
+    text-transform: uppercase;
+    font-weight: 600;
+    font-size:30px;
+    line-height: 150%;
 }
 
 div.left{
