--- a/style.css
+++ b/style.css
@@ -533,7 +533,7 @@ div.subtitle{
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     justify-content: center;
     background-color: #0f4b3b;
-    margin-bottom: 0 0 20px 0;
+    margin: 0 0 20px 0;
     text-decoration: none;
     text-align: center;
     color: #eddc98;
