--- a/style.css
+++ b/style.css
@@ -286,11 +286,11 @@ footer td.center {
 footer td a {
     text-decoration: none;
     color: black;
-    font-style: italic;
+    font-style: normal;
     font-family: 'Nunito', serif;
     font-weight: 600;
     font-size: 16px; /*1.8vw;*/
-    line-height: 150%;
+    line-height: 100%;
     vertical-align: top;
 }
 
