--- a/style.css
+++ b/style.css
@@ -131,18 +131,14 @@ nav{
   padding: 20px 10px;
   background-color: black;
   float: left;
-    /*display:flex;*/
-    background-color: black;
-    float: right;
-    display:flex;
-
-	
-    text-decoration: none;
-    font-family: 'Oswald', sans-serif;
-    text-transform: uppercase;
-    font-weight: 400;
-    font-size: 20px;/*1.5vw;*/
-    line-height: 20px;
+  display:flex;
+  width:100%;
+  /*text-decoration: none;
+  font-family: 'Oswald', sans-serif;
+  text-transform: uppercase;
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 20px;*/
 }
 
 header nav img {
