--- a/style.css
+++ b/style.css
@@ -100,15 +100,7 @@ ul {
   background-color: black;
 }
 
-nav ul {
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
-  overflow: hidden;
-  background-color: black;
-  display: inline-block;
-  text-align: right;
-}
+
 
 ul li a {
   display: block;
@@ -155,6 +147,28 @@ header nav img {
 	width: 120px;/*150vw*/
 	float: left;
 }
+
+div.menu {
+  float: right;
+}
+
+div.menu ul{
+  right: 0;
+  border:0;
+  margin:0;
+  padding:0;
+  list-style: none;
+}
+
+/*nav ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  background-color: black;
+  display: inline-block;
+  text-align: right;
+}*/
 
 /*nav a{
   float: left;
